...
        Promise { [weak self] resolve, reject in
            self?.imapSess?
                .fetchAllFoldersOperation()
                .start { [weak self] error, value in
                    guard let self = self else { return reject(AppErr.nilSelf) }
                    guard self.notRetrying("fetchFolders", error, resolve, reject, retry: { self.fetchFolders() }) else {
                        return
                    }
                    if let error = error {
                        reject(AppErr(error))
                    } else if let folders = value as? [MCOIMAPFolder] {
                        self.saveTrashFolderPath(with: folders)
                        resolve(folders)
...
                    }
            }
        }
    }

    private func saveTrashFolderPath(with folders: [MCOIMAPFolder]) {
        if dataService.email?.contains("gmail") ?? false {
            dataService.saveTrashFolder(path: MailDestination.Gmail.trash.path)
        } else {
            let paths = folders.compactMap { $0.path }
            guard let path = paths.firstCaseInsensitive("trash") ?? paths.firstCaseInsensitive("deleted") else {
                debugPrint("###Warning### Trash folder not found")
                return
...
