...
                    title: self.decorator.buttonTitle(for: .loadAccount),
                    insets: self.decorator.insets.buttonInsets
                ) { [weak self] in
                    self?.handleButtonPressed()
                }
                .then {
                    $0.button.accessibilityIdentifier = "load_account"
                }
            case .optionalAction:
                return ButtonCellNode(
                    title: self.decorator.useAnotherAccountTitle,
                    insets: self.decorator.insets.optionalButtonInsets,
                    color: .white
...
