...
//

import UIKit

// Uncomment for FlowCrypt application
extension UIColor {
    static var main: UIColor {
        UIColor(r: 36, g: 156, b: 6, alpha: 1)
    }

    static var textColor: UIColor {
        UIColor(r: 57, g: 57, b: 57, alpha: 1)
    }
...
